<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.modernet.uspot.PostActivity">



    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/text"
        android:layout_toLeftOf="@+id/categories"
        android:hint="@string/name"/>

    <Spinner
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/name" />

    <EditText
        android:id="@+id/description"
        android:textColor="@color/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="2"
        />

    <EditText
        android:id="@+id/adress"
        android:textColor="@color/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/description"
        android:layout_below="@+id/description"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <Switch
        android:id="@+id/auto_locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/adress"
        android:text="@string/enable_location" />


    <CheckBox
        android:id="@+id/mob_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/auto_locate"
        android:text="@string/reduced_mobility"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mob_red"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmit"
        android:text="@string/submit" />


</RelativeLayout>
